test/runtime/fail/fn/missing_comma.hy

// expect error: Expected `)` after function declaration arguments

fn test(hello there) {
	// ...
}
